# CV-Project

./: pyproject.toml
CV-Project_DEF/: README.md  environment.yml  gen_pose.py  gen_segment.py  prediction.py  prediction_slide.py  training.py
CV-Project_DEF/ContinuousLIS/: CSLIS_training_noKeypoints.yaml  CSLR_slide_noKpoints.yaml
CV-Project_DEF/ContinuousLIS/pkl/: Readme.txt  continuous_vocab.json  test.pkl  test_updated.pkl  train.pkl  train_updated.pkl  val.pkl  val_updated.pkl
CV-Project_DEF/IsolatedLIS/: ISLIS_training_noKeypoints.yaml
CV-Project_DEF/IsolatedLIS/pkl/: train.pkl  val.pkl  vocab.json
CV-Project_DEF/dataset/: Dataloader.py  Dataset.py  VideoLoader.py
CV-Project_DEF/modelling/: S3D.py  Visualhead.py  model.py  recognition.py  tokenizer.py  translation.py
CV-Project_DEF/resources/: Final_vocab.json  gloss2ids.pkl
SLRT-main/: CtcdecodeInstaller.py  prova.py  videos.txt
SLRT-main/Dataset/: parole senza gloss.txt
SLRT-main/Dataset/Test/: test.json
SLRT-main/Dataset/Train/: train.json
SLRT-main/Dataset/Val/: val.json
SLRT-main/Online/: START EXPERIMENT.md  cv-prova2(kaggle).ipynb  requirements.txt  requirements_prova.txt  training_requirements.txt
SLRT-main/Online/CSLR/: prediction_slide.py  training.py
SLRT-main/Online/CSLR/configs/: continuous_lis.yaml  daset.yaml  dataset.yaml  dataset_noKeypoints.yaml
SLRT-main/Online/CSLR/dataset/: Dataloader.py  Dataset.py  VideoLoader.py
SLRT-main/Spoken2Sign/: model.py  motion_gen.py  render_avatar.py  sign_connector_train.py
SLRT-main/utils/: DatasetChecker.py  DatasetSplitter.py
(+19 files in other folders)
