[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
  "torch==2.0.0"
]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "cv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ctcdecode",
    "lintel>=0.1.0",
    "mmcv==1.7.1",
    "numpy==1.26",
    "pip>=25.1.1",
    "tensorboard==2.17.1",
    "timm==0.6.13",
    "torch==2.0.0",
    "torchvision==0.15.1",
    "transformers==4.47.0",
    "wandb>=0.19.11",
    "wheel>=0.45.1",
]

[tool.uv.sources]
ctcdecode = { git = "https://github.com/WayenVan/ctcdecode.git" }
